# libtcgstorage

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  libtcgstorage.c  libtcgstorage.h  tcgs_builder.c  tcgs_builder.h  tcgs_command.c  tcgs_command.h  tcgs_config.h  tcgs_interface.c  tcgs_interface.h  tcgs_interface_ata.c  tcgs_interface_ata.h  tcgs_interface_encode.c  tcgs_interface_encode.h  tcgs_interface_virtual.c  tcgs_interface_virtual.h  tcgs_memory.c  tcgs_memory.h  tcgs_parser.c  tcgs_parser.h  tcgs_properties.c  tcgs_properties.h  tcgs_stream.h  tcgs_types.h  tcgs_verbose.c  tcgs_verbose.h
src/unix/: tcgs_interface_ata_unix.c
src/win/: ntddscsi.h  tcgs_interface_ata_win.c
tcgsparm/: CMakeLists.txt  tcgsparm.c  tcgsparm_platform.h
tcgsparm/unix/: tcgsparm_unix.c
tcgsparm/win/: tcgsparm_win.c
test/: CMakeLists.txt  tcgs_interface_virtual.c  tcgs_interface_virtual.h  testmain.c  utest.h
vtper/: CMakeLists.txt  tcgs_interface_vtper.c  tcgs_interface_vtper.h  vtper.c  vtper.h
